--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,7 +12,10 @@
     "@heroicons/react": "^2.1.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
